# YT-Studio

./: .dockerignore  .env.example  .env.schema  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AI_AUTOMATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_READY.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_VERIFICATION.md  QUICK_START.md  README.md  README_FINAL.md  SETUP_GUIDE.md  STATUS_REPORT.md  TOKEN_CONFIG.md  UI_REDESIGN_COMPLETE.md  WEBSITE_ANALYSIS.md  WRANGLER_FIX.md  ai_logic_patch.js  ai_panel_patch.html  ai_topics_patch.js  analytics_logic_patch.js  analytics_patch.html  app_readable.js  aria_patch.html  automate-build.ps1  build-automation.ps1  build_log.txt  clean-project.ps1  css_updates.css  dashboard_logic_patch.js  deployment-url.txt  docker-compose.yml  (+80 more)
.Jules/: canvas.md  palette.md
.circleci/: config.yml  deploy.yml
.jules/: bolt.md  palette.md  sentinel.md
YT-Studio/: index.html  package-lock.json  package.json
app/: package.json  wrangler.jsonc
css/: ai.css  dashboard.css  editor.css  islamic.css  manuscript.css  planner.css  repurpose.css  research.css  seo.css  style.css  voice.css
functions/: .eslintrc.js  package-lock.json  package.json
js/: ai.js  analytics.js  app.js  app.js.min.backup  app.js.tmp  app.test.js  app_new.js  automation.js  citation.js  config.js  dashboard.js  highlight.test.js  islamic.js  monitoring.js  planner.js  repurpose.js  research.js  script.js  search.js  seo.js  versioning.js  voice.js
my-sandbox-app/: index.mts  pnpm-lock.yaml
(+98 files in other folders)
